--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ Thumbs.db
 *.swp
 *.swo
 
-# Optional: Keep CSV files out of repo if they're frequently updated
+# CSV files are needed for GitHub Actions to generate data.js
 # *.csv
 
 # Python artifacts (if any remain)
